--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -36280,11 +36280,10 @@ span[data-flexitour=container][x-placement=right] div[data-role=arrow]:after, sp
     height: calc(100vh - 50px - max(96px, 0.9375rem * 3));
   }
 }
-@media (min-width: 992px) {
-  #page.drawers:has(.tox-fullscreen, .tox-dialog) {
-    overflow-y: unset;
-  }
+#page.drawers:has(.tox-fullscreen, .tox-dialog) {
+  overflow: unset !important; /* stylelint-disable-line */
 }
+
 .drawercontrolbuttons {
   margin-top: 92px;
 }
